Fix thymeleaf exception.